# BME280

./: MIT-LICENSE.md  Makefile  README.md  meson.build
src/: meson.build
src/app/: AardvarkSPIExample.cpp  meson.build
src/app/bosch-driver-aardvark/: AardvarkI2CExample.c  meson.build
src/app/c-virtual-device/: meson.build  virtual_devices.c
src/app/cpp-virtual-device/: virtual_devices.cpp
src/app/decoupled-sparkfun-demo/: AardvarkI2CExample.cpp  meson.build
src/app/refactored-sparkfun-demo/: AardvarkI2CExample.cpp  AardvarkSPIExample.cpp  Modified_Example1_BasicReadings.cpp  meson.build
src/bosch-driver/: bme280.c  bme280.h  bme280_defs.h  meson.build
src/driver/: driver.hpp
src/drivers/: meson.build
src/drivers/bosch-driver/: meson.build
src/drivers/driver/: driver.cpp
src/drivers/sparkfun-driver/: SparkFunBME280_redesigned.cpp  SparkFunBME280_redesigned.h  meson.build
src/drivers/sparkfun-driver/_private/: bme280_defs.hpp  bme280_implementation_details.hpp
src/example-app/: AardvarkExample.cpp  AardvarkI2CExample.cpp  AardvarkSPIExample.cpp  Modified_Example1_BasicReadings.cpp  main.cpp  meson.build
src/hw_platforms/: meson.build
src/hw_platforms/bosch_bme280_aardvark/: hardware_platform.c  hardware_platform.h  meson.build
src/lib/: fixed_point_math.c  meson.build
src/lib/environment_calculations/: environment_calculations.cpp  environment_calculations.hpp  meson.build
src/lib/fixed_point_math/: fixed_point_math.h
src/sparkfun-driver/: SparkFunBME280.cpp  SparkFunBME280.h  meson.build
src/virtual_devices/: meson.build  virtual_bosch_bme280_shim.c  virtual_bosch_bme280_shim.h
subprojects/: aardvark.wrap  c-interfaces.wrap
