# TODO
# - Rename targets
# - Implement desired structure
# 	The structure below assumes you have a mix of vendor files, your own implementation, and an
# 	application that you want to use to demonstrate/test functionality of the device.
#	You do not have to stick to this structure!


# subdir('driver')
# subdir('example-app')
subdir('sparkfun-driver')
